# climate-data-pipeline

./: .gitignore  README.md  alembic.ini  config.json  gcp_infrastructure.md  pyproject.toml
alembic/: env.py
alembic/versions/: 42b5a33459ef_create_product_tables.py  a23eff8ce309_change_id_column_type.py
dash/: app.py  nested_adms.py
dash/assets/: style.css
db/: __init__.py  base_table.py  country.py  session.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: access1-0_rcp45.sql  access1-0_rcp85.sql  adm1_aggregate.sql  bnu-esm_rcp26.sql  bnu-esm_rcp45.sql  ccsm4_rcp60.sql  schema.yml  source.yml  union_table.sql
dbt/models/example/: adm1_aggregate.sql
docker/: .env_sample  docker-compose.yaml
orchestration/: local_to_gcs.py  local_to_postgres.py  make_gcp_blocks.py  prefect_deployment.py  raster_ingestion.py  raster_processing.py  utils.py  web_to_gcs.py  web_to_postgres.py
pipeline/: __init__.py  base_table.py  climatology.py  climatology_processing.py  climatology_uploads.py  climatology_urls.py  config.py  crop.py  download.py  functions.py  local_to_gcs.py  local_to_postgres.py  log.py  main.py  processing_functions.py  processing_steps.py  raster_processing.py  session.py  tables.py  upload.py  vector_download.py  vector_processing.py  yearly_table.py  zonal_stats.py
terraform/: main.tf  terraform_execution.md  variables.tf
tests/: test_climatology.py  test_climatology_processing.py
utils/: __init__.py  read_db_table.py  session.py  timestamp.py
