[tool.poetry]
name = "data-engineering"
version = "0.1.0"
description = "Environment for climate-data-pipeline"
authors = ["Ilse Paniagua <ilsep@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
pandas = "^1.5.3"
prefect = "^2.7.11"
prefect-gcp = "^0.2.5"
rasterio = "^1.3.5.post1"
rasterstats = ">=0.17.1,<=0.18.0"
pyarrow = "^11.0.0"
pandas-gbq = "^0.19.1"
geojson = "^3.0.0"
geopandas = "^0.12.2"
numpy = "^1.24.2"
python-dotenv = "^1.0.0"
dash = "^2.9.3"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
